@@ -14,6 +14,10 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+19 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-21)
+-----------------------------------------------------------------
+- G4LMsdGenerator - fixed shortlived decays (V.Grichine)
+
 14 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-20)
 -----------------------------------------------------------------
 - G4LMsdGenerator - fixed energy concervation (V.Grichine)
